apps/radio-autoplaylist-frontend/radio-autoplaylist-frontend-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoplaylist-ext
  labels:
    type: external

spec:
  tls:
    - hosts:
        - autoplaylist.{hostname}
      secretName: autoplaylist
  rules:
    - host: not-found-on-spotify.{hostname}
      http:
        paths:
          - backend:
              service:
                name: autoplaylist
                port:
                  number: 4533
            path: /
            pathType: Prefix
